--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         *{margin: 0;padding: 0;box-sizing: border-box;}
 
-        :root{
+        html{
             --button-color:#606266;
             --button-color-hover:#409eff;
             --font-size:14px;
@@ -21,45 +21,15 @@
             --button-border-color:#dcdfe6;
             --button-border-color-hover:#c6e2ff;
             --button-color-border-active:rgb(88,159,234)
-
-
         }
     </style>
-    <style>
-        .bl-button{
-            color: var(--button-color);
-            font-size: var(--font-size);
-            line-height: var(--button-line-height);
-            background-color: var(--button-bg);
-            padding: var(--button-padding);
-            border: 1px solid var(--button-border-color);
-            border-radius: var(--button-border-radius);
-            text-align: center;
-            cursor: pointer;
-            transition: .1s;
 
-        }
-        .bl-button:hover{
-            color: var(--button-color-hover);
-            border-color: var(--button-border-color-hover);
-            background-color: var(--button-bg-hover);
-        }
-        .bl-button:active{
-            color: var(--button-color-border-active);
-            border-color: var(--button-color-border-active);
-        }
-    </style>
 </head>
 <body>
 <div id="app">
 <bl-button></bl-button>
 </div>
-<script src="./node_modules/vue/dist/vue.min.js"></script>
-<script src="./button.js"></script>
-<script>
-    new Vue({
-        el:'#app'
-    })
-</script>
+
+<script src="./src/app.js"></script>
 </body>
 </html>
