添加Loading，添加loading的click事件

--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
     <bl-button icon="setting">
         我写的内容
     </bl-button>
+    <bl-button :loading="loading1" @click="loading1 = !loading1">
+        我写的内容
+    </bl-button>
+    <bl-button :loading="loading2" icon-position="right"  @click="loading2 = !loading2">
+        我写的内容
+    </bl-button>
 </div>
 
 <script src="./src/app.js"></script>
-<script src="//at.alicdn.com/t/c/font_3586261_wvo3xrlg1p8.js"></script>
+<script src="//at.alicdn.com/t/c/font_3586261_2mfnj91voy4.js"></script>
 </body>
 </html>
