--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     <bl-button :loading="loading2" icon-position="right"  @click="loading2 = !loading2">
         我写的内容
     </bl-button>
+    <bl-button-group>
+        <bl-button icon="left">上一页</bl-button>
+        <bl-button>更多</bl-button>
+        <bl-button icon="right" icon-position="right">下一页</bl-button>
+    </bl-button-group>
 </div>
 
 <script src="./src/app.js"></script>
