使用chai增加四个单元测试用例，第五个还没搞定

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <bl-button icon="setting" icon-position="right">
         我写的内容
     </bl-button>
-    <bl-button icon="setting">
+    <bl-button icon="setting" >
         我写的内容
     </bl-button>
-    <bl-button :loading="loading1" @click="loading1 = !loading1">
+    <bl-button :loading="loading1"  icon="setting"  @click="loading1 = !loading1">
         我写的内容
     </bl-button>
     <bl-button :loading="loading2" icon-position="right"  @click="loading2 = !loading2">
