添加row的align=left right center属性

--- a/index.html
+++ b/index.html
@@ -27,10 +27,32 @@
             --button-color-border-active: rgb(88, 159, 234)
         }
     </style>
-
+<style>
+    .demo{
+        min-height: 60px;
+        background: #409eff;
+        border: 1px solid black;
+    }
+</style>
 </head>
 <body>
 <div id="app" style="margin: 30px">
+    <bl-row class="topbar">
+        <bl-col class="demo" span="9">
+            <bl-row align="right">
+                <bl-col>1</bl-col>
+                <bl-col>2</bl-col>
+                <bl-col>3</bl-col>
+                <bl-col>4</bl-col>
+            </bl-row>
+        </bl-col>
+        <bl-col class="demo" span="15">2</bl-col>
+    </bl-row>
+    <bl-row class="logo">
+        <bl-col class="demo" span="4">1</bl-col>
+        <bl-col class="demo" span="14">2</bl-col>
+        <bl-col class="demo" span="6">2</bl-col>
+    </bl-row>
     <div style="border: 1px solid black">
 <bl-row :gutter="10">
     <bl-col>1</bl-col>
