--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 </head>
 <body>
 <div id="app">
-<button @click="showToast" >11</button>
+    <button @click="showToast1">11</button>
+    <button @click="showToast2">22</button>
+    <button @click="showToast3">33</button>
 </div>
 <script src="./src/app.js"></script>
 </body>
