使tabs-item可以选择切换

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <div id="app">
-    <bl-tabs :selected.sync="selectedTab">
+    <bl-tabs :selected.sync="selected">
         <bl-tabs-head>
             <template slot="action">
                 <button>action</button>
