完成tabs的disabled功能

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <bl-tabs-item name="1">
                 我是11111111111111
             </bl-tabs-item>
-            <bl-tabs-item name="2">
+            <bl-tabs-item name="2" :disabled="true">
                 我是2222
             </bl-tabs-item>
             <bl-tabs-item name="3">
