完成tabs组件的测试

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <div id="app">
-    <bl-tabs :selected.sync="selected">
+    <bl-tabs :selected.sync="selected" >
         <bl-tabs-head>
             <template slot="action">
                 <button>action</button>
@@ -39,7 +39,7 @@
             <bl-tabs-item name="1">
                 我是11111111111111
             </bl-tabs-item>
-            <bl-tabs-item name="2" :disabled="true">
+            <bl-tabs-item name="2">
                 我是2222
             </bl-tabs-item>
             <bl-tabs-item name="3">
