--- a/index.html
+++ b/index.html
@@ -31,57 +31,12 @@
 </head>
 <body>
 <div id="app" style="padding:300px">
-    <bl-popover position="left">
-        <template slot="content" slot-scope="{close}">
-            <div>popover内容</div>
-            <span @click="close">X</span>
-        </template>
-        <bl-button>啊哈哈哈哈</bl-button>
-    </bl-popover>
-  <bl-popover position="bottom">
-      <template slot="content">
-          <div>popover内容</div>
-      </template>
-          <bl-button>啊哈哈哈哈</bl-button>
-  </bl-popover>
-    <bl-popover position="top">
-        <template slot="content">
-            <div>popover内容</div>
-        </template>
-        <bl-button>啊哈哈哈哈</bl-button>
-    </bl-popover>
-
-    <bl-popover position="right">
-        <template slot="content">
-            <div>popover内容</div>
-        </template>
-        <bl-button>啊哈哈哈哈</bl-button>
-    </bl-popover>
-    <bl-popover position="left" trigger="hover">
-        <template slot="content">
-            <div>popover内容</div>
-        </template>
-        <bl-button>啊哈哈哈哈</bl-button>
-    </bl-popover>
-    <bl-popover position="bottom" trigger="hover">
-        <template slot="content">
-            <div>popover内容</div>
-        </template>
-        <bl-button>啊哈哈哈哈</bl-button>
-    </bl-popover>
-    <bl-popover position="top" trigger="hover">
-        <template slot="content">
-            <div>popover内容</div>
-        </template>
-        <bl-button>啊哈哈哈哈</bl-button>
-    </bl-popover>
-
-    <bl-popover position="right" trigger="hover">
-        <template slot="content">
-            <div>popover内容</div>
-        </template>
-        <bl-button>啊哈哈哈哈</bl-button>
-    </bl-popover>
+   <bl-collapse>
+       <bl-collapse-item title="标题1">内容1</bl-collapse-item>
+       <bl-collapse-item title="标题2">内容2</bl-collapse-item>
+       <bl-collapse-item title="标题3">内容3</bl-collapse-item>
+       <bl-collapse-item title="标题4">内容4</bl-collapse-item>
+   </bl-collapse>
 </div>
 <script src="./src/app.js"></script>
 </body>
