--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <div id="app" style="padding:300px">
-   <bl-collapse selected="3">
+   <bl-collapse :selected.sync="selected"  :single="true">
        <bl-collapse-item name="1" title="标题1">内容1</bl-collapse-item>
        <bl-collapse-item name="2" title="标题2">内容2</bl-collapse-item>
        <bl-collapse-item name="3" title="标题3">内容3</bl-collapse-item>
