--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
 </head>
 <body>
 <div id="app" style="padding:300px">
-   <bl-collapse :selected.sync="selected"  :single="true">
-       <bl-collapse-item name="1" title="标题1">内容1</bl-collapse-item>
-       <bl-collapse-item name="2" title="标题2">内容2</bl-collapse-item>
-       <bl-collapse-item name="3" title="标题3">内容3</bl-collapse-item>
-       <bl-collapse-item name="4" title="标题4">内容4</bl-collapse-item>
-   </bl-collapse>
+<bl-button icon-name="success">111</bl-button>
+    <bl-button icon-name="loading">111</bl-button>
+    <bl-button icon-name="setting">111</bl-button>
+    <bl-button icon-name="info">111</bl-button>
+    <bl-button icon-name="warning">111</bl-button>
+    <bl-button icon-name="error">111</bl-button>
+    <bl-button icon-name="left" icon-position="right">111</bl-button>
+    <bl-button icon-name="download">111</bl-button>
+    <bl-button-group>
+        <bl-button icon-name="left"></bl-button>
+        <bl-button>信息</bl-button>
+        <bl-button icon-name="right"></bl-button>
+    </bl-button-group>
 </div>
 <script src="./src/app.js"></script>
 </body>
