--- a/index.html
+++ b/index.html
@@ -13,26 +13,12 @@
             box-sizing: border-box;
         }
 
-        html {
-            --button-color: #606266;
-            --button-color-hover: #409eff;
-            --font-size: 14px;
-            --button-line-height: 1;
-            --button-bg: #fff;
-            --button-bg-hover: #ecf5ff;
-            --button-padding: 12px 1em;
-            --button-border-radius: 4px;
-            --button-border-color: #dcdfe6;
-            --button-border-color-hover: #c6e2ff;
-            --button-color-border-active: rgb(88, 159, 234)
-        }
     </style>
 
 </head>
 <body>
 <div id="app" style="padding:300px">
 <bl-button icon-name="success">111</bl-button>
-    <bl-button icon-name="loading">111</bl-button>
     <bl-button icon-name="setting">111</bl-button>
     <bl-button icon-name="info">111</bl-button>
     <bl-button icon-name="warning">111</bl-button>
@@ -45,6 +31,6 @@
         <bl-button icon-name="right"></bl-button>
     </bl-button-group>
 </div>
-<script src="./src/app.js"></script>
+<script type="module"    src="./src/app.js"></script>
 </body>
 </html>
