--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BlitzUI</title>
 <style>
-    *{box-sizing: border-box}
+    *{box-sizing: border-box;margin: 0;padding: 0}
 </style>
 
 </head>
 <body>
-<div id="app" style="padding: 300px">
+<div id="app"  style="margin: 300px">
     <bl-tabs selected="tab1">
         <bl-tabs-head>
             <bl-tabs-item name='tab1'>Tab1</bl-tabs-item>
