--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <bl-tabs-panel name='tab4'>内容4</bl-tabs-panel>
         </bl-tabs-body>
     </bl-tabs>
+    <a href="https://juejin.cn/user/163177786258141"></a>
 </div>
 <script   src="./src/app.js"></script>
 </body>
