修改版本号

--- a/index.html
+++ b/index.html
@@ -12,22 +12,8 @@
 
 </head>
 <body>
-<div id="app"  style="margin: 300px">
-    <bl-tabs selected="tab1">
-        <bl-tabs-head>
-            <bl-tabs-item name='tab1'>Tab1</bl-tabs-item>
-            <bl-tabs-item name='tab2'>比较长名字的Tab2</bl-tabs-item>
-            <bl-tabs-item name='tab3'>更将长的名字长度的Tab3</bl-tabs-item>
-            <bl-tabs-item name='tab4'>被禁用的Tab4</bl-tabs-item>
-        </bl-tabs-head>
-        <bl-tabs-body>
-            <bl-tabs-panel name='tab1'>内容1</bl-tabs-panel>
-            <bl-tabs-panel name='tab2'>内容2</bl-tabs-panel>
-            <bl-tabs-panel name='tab3'>内容3</bl-tabs-panel>
-            <bl-tabs-panel name='tab4'>内容4</bl-tabs-panel>
-        </bl-tabs-body>
-    </bl-tabs>
-    <a href="https://juejin.cn/user/163177786258141"></a>
+<div id="app"  >
+
 </div>
 <script   src="./src/app.js"></script>
 </body>
